# VibeMotion

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Launch-VibeMotion-Visible.bat  Launch-VibeMotion.bat  NOTICE.md  README.md  Stop-VibeMotion.bat  THIRD_PARTY_NOTICES.md  pyproject.toml
app/: main.py
docs/: INSTALL_WINDOWS.md  github_publish_checklist.md  hyperframes_v2_workflow_notes.md  license_review.md  motion_quality_rubric.md  motion_regression_matrix.md
figma-plugin/: code.js  manifest.json  ui.html
scripts/: audit_motion_state.py  audit_publication.py  bootstrap.ps1  capture_presentation_guide.js  check_ltx_models.py  download_ltx_models.py  ltx_worker.py  motion_autotest.py  qa_cleanup_multilingual.py  qa_ltx_canvas_drag.js  qa_ltx_contract.py  qa_motion_20prompts_wave.py  qa_motion_5prompts_10frames.py  qa_motion_adobe_suite.py  qa_motion_advanced_choreo_suite.py  qa_motion_auto_repair.py  qa_motion_choreography.py  qa_motion_complex_prompt_suite.py  qa_motion_director_ui.js  qa_motion_effect_registry.py  qa_motion_final_prompt_three_frames.py  qa_motion_intent_contract.py  qa_motion_max_matrix.py  qa_motion_native_effects.py  qa_motion_prompt_scenario.py  qa_motion_prompt_senior.py  qa_motion_random_suite.py  qa_motion_real_figma_suite.py  qa_motion_scene_camera.py  qa_motion_senior_suite.py  qa_motion_strict_user_prompt.py  qa_motion_visual_self_check.py  qa_native_motion_cue_ui.js  qa_nonfigma_motion.py  qa_one_hour_soak.py  qa_responsive_ltx.js  qa_timeline_clip_edit.py  qa_vibemotion_browser.js  qa_vibemotion_interactions.js  (+3 more)
(+31 files in other folders)
