[project]
name = "vibemotion"
version = "0.1.0"
description = "Local AI-assisted video editing and motion design MVP"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "python-multipart>=0.0.9,<1.0",
  "pillow>=10.4,<12.0",
  "faster-whisper>=1.1.0,<2.0",
]

[project.optional-dependencies]
ltx = [
  "ltx-pipelines>=1.0.0,<2.0",
  "diffusers>=0.38.0,<1.0",
  "transformers>=5.8.0,<6.0",
  "accelerate>=1.13.0,<2.0",
  "torch>=2.7,<2.8",
  "torchaudio>=2.7,<2.8",
  "torchvision>=0.22,<0.23",
  "sentencepiece>=0.2.1,<1.0",
  "safetensors>=0.8.0rc0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.core", "app.models", "app.services"]
